--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,8 @@
 .App {
   min-height: 100vh;
   display: flex;
-  background-image: url("./background.png");
-  background-position: center;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);  background-position: center;
   background-size: cover;
 }
 
